--- a/Gamu3.0/Gamu3.0/bin/Gamu3.0.dll.config
+++ b/Gamu3.0/Gamu3.0/bin/Gamu3.0.dll.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
   https://go.microsoft.com/fwlink/?LinkId=169433
@@ -68,5 +68,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="BDConeccion" connectionString="Data Source = DBGAMU2017.mssql.somee.com;Initial Catalog = DBGAMU2017;Persist Security info=true; User=GAMU_SQLLogin_1;Password = xz1okr1495;" />
+    <add name="DBGAMU2017ConnectionString" connectionString="Data Source=DBGAMU2017.mssql.somee.com;Initial Catalog=DBGAMU2017;User ID=GAMU_SQLLogin_1;Password=xz1okr1495"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
